<resources>
    <string-array name="signup_spinner_id">
        <item>Student</item>
        <item>Comapany</item>
    </string-array>

    <string-array name="department_spinner">
        <item>CSE</item>
        <item>IT</item>
        <item>ME</item>
        <item>ECE</item>
        <item>EEE</item>
        <item>META</item>
        <item>MINING</item>
    </string-array>

    <string name="app_name">Campus Recruitment System</string>
    <string name="projectName">Campus Recruitment System</string>
    <string name="createAccount">Create New Account</string>
    <string name="userFullName">Name</string>
    <string name="userName">Username</string>
    <string name="userId">UserId</string>
    <string name="userEmailId">EmailId</string>
    <string name="userContactNo">ContactNo</string>
    <string name="userPassword">Password</string>
    <string name="userConfirmPassword">Confirm Password</string>
    <string name="SignInButton">Sign In</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_justforchecking">justforchecking</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_updatestudentdetails">updatestudentdetails</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
